@@ -50,15 +50,17 @@ import org.gradle.api.tasks.Nested;
 import org.gradle.api.tasks.Optional;
 import org.gradle.api.tasks.PathSensitive;
 import org.gradle.api.tasks.PathSensitivity;
+import org.gradle.api.tasks.Sync;
+import org.gradle.api.tasks.TaskProvider;
+import org.gradle.api.tasks.bundling.AbstractArchiveTask;
+import org.gradle.api.tasks.bundling.Zip;
 import org.gradle.api.tasks.util.PatternFilterable;
 import org.gradle.process.ExecOperations;
 
-import java.io.BufferedReader;
 import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.InputStreamReader;
 import java.io.LineNumberReader;
 import java.io.UncheckedIOException;
 import java.net.URL;
@@ -68,7 +70,6 @@ import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.StandardOpenOption;
-import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -95,6 +96,7 @@ import java.util.stream.Stream;
 
 import static java.util.Objects.requireNonNull;
 import static java.util.Optional.ofNullable;
+import static org.elasticsearch.gradle.plugin.PluginBuildPlugin.EXPLODED_BUNDLE_CONFIG;
 
 public class ElasticsearchNode implements TestClusterConfiguration {
 
@@ -122,7 +124,6 @@ public class ElasticsearchNode implements TestClusterConfiguration {
     private static final String HOSTNAME_OVERRIDE = "LinuxDarwinHostname";
     private static final String COMPUTERNAME_OVERRIDE = "WindowsComputername";
 
-    private final String clusterName;
     private final String path;
     private final String name;
     private final Project project;
@@ -163,10 +164,11 @@ public class ElasticsearchNode implements TestClusterConfiguration {
     private final Path tmpDir;
     private final Provider<File> runtimeJava;
     private final Function<Version, Boolean> isReleasedVersion;
+    private final List<ElasticsearchDistribution> distributions = new ArrayList<>();
+    private final Attribute<Boolean> bundleAttribute = Attribute.of("bundle", Boolean.class);
 
     private int currentDistro = 0;
     private TestDistribution testDistribution;
-    private List<ElasticsearchDistribution> distributions = new ArrayList<>();
     private volatile Process esProcess;
     private Function<String, String> nameCustomization = Function.identity();
     private boolean isWorkingDirConfigured = false;
@@ -175,8 +177,6 @@ public class ElasticsearchNode implements TestClusterConfiguration {
     private Path confPathData;
     private String keystorePassword = "";
     private boolean preserveDataDir = false;
-
-    private Attribute<Boolean> bundleAttribute = Attribute.of("bundle", Boolean.class);
 
     ElasticsearchNode(
         String clusterName,
@@ -192,7 +192,6 @@ public class ElasticsearchNode implements TestClusterConfiguration {
         Provider<File> runtimeJava,
         Function<Version, Boolean> isReleasedVersion
     ) {
-        this.clusterName = clusterName;
         this.path = path;
         this.name = name;
         this.project = project;
@@ -303,21 +302,19 @@ public class ElasticsearchNode implements TestClusterConfiguration {
 
     // creates a configuration to depend on the given plugin project, then wraps that configuration
     // to grab the zip as a file provider
-    private Provider<RegularFile> maybeCreatePluginOrModuleDependency(String path) {
-        Configuration configuration = pluginAndModuleConfigurations.computeIfAbsent(path, key -> {
-            Dependency bundleDependency = this.project.getDependencies().project(Map.of("path", path, "configuration", "zip"));
+    private Provider<RegularFile> maybeCreatePluginOrModuleDependency(String path, String consumingConfiguration) {
+        var configuration = pluginAndModuleConfigurations.computeIfAbsent(path, key -> {
+            var bundleDependency = this.project.getDependencies().project(Map.of("path", path, "configuration", consumingConfiguration));
             return project.getConfigurations().detachedConfiguration(bundleDependency);
         });
 
-        /**
-         * dependencies.create(files(provider { println("provider"); File(".") }))
-         *
-         * */
         Provider<File> fileProvider = configuration.getElements()
             .map(
                 s -> s.stream()
                     .findFirst()
-                    .orElseThrow(() -> new IllegalStateException("zip configuration of project " + path + " had no files"))
+                    .orElseThrow(
+                        () -> new IllegalStateException(consumingConfiguration + " configuration of project " + path + " had no files")
+                    )
                     .getAsFile()
             );
         return project.getLayout().file(fileProvider);
@@ -332,7 +329,11 @@ public class ElasticsearchNode implements TestClusterConfiguration {
 
     @Override
     public void plugin(String pluginProjectPath) {
-        plugin(maybeCreatePluginOrModuleDependency(pluginProjectPath));
+        plugin(maybeCreatePluginOrModuleDependency(pluginProjectPath, "zip"));
+    }
+
+    public void plugin(TaskProvider<Zip> plugin) {
+        plugin(plugin.flatMap(AbstractArchiveTask::getArchiveFile));
     }
 
     @Override
@@ -340,6 +341,10 @@ public class ElasticsearchNode implements TestClusterConfiguration {
         checkFrozen();
         registerExtractedConfig(module);
         this.modules.add(module.map(RegularFile::getAsFile));
+    }
+
+    public void module(TaskProvider<Sync> module) {
+        module(project.getLayout().file(module.map(Sync::getDestinationDir)));
     }
 
     private void registerExtractedConfig(Provider<RegularFile> pluginProvider) {
@@ -366,7 +371,7 @@ public class ElasticsearchNode implements TestClusterConfiguration {
 
     @Override
     public void module(String moduleProjectPath) {
-        module(maybeCreatePluginOrModuleDependency(moduleProjectPath));
+        module(maybeCreatePluginOrModuleDependency(moduleProjectPath, EXPLODED_BUNDLE_CONFIG));
     }
 
     @Override
@@ -478,17 +483,8 @@ public class ElasticsearchNode implements TestClusterConfiguration {
     public void freeze() {
         requireNonNull(testDistribution, "null testDistribution passed when configuring test cluster `" + this + "`");
         LOGGER.info("Locking configuration of `{}`", this);
-        distributions.stream().forEach(d -> d.maybeFreeze());
+        distributions.forEach(ElasticsearchDistribution::maybeFreeze);
         configurationFrozen.set(true);
-    }
-
-    /**
-     * Returns a stream of lines in the generated logs similar to Files.lines
-     *
-     * @return stream of log lines
-     */
-    public Stream<String> logLines() throws IOException {
-        return Files.lines(esLogFile, StandardCharsets.UTF_8);
     }
 
     @Override
@@ -594,17 +590,13 @@ public class ElasticsearchNode implements TestClusterConfiguration {
     }
 
     private void logToProcessStdout(String message) {
-        logToProcessStdout(message, esLogFile);
-    }
-
-    private static void logToProcessStdout(String message, Path esLogFile) {
         try {
             if (Files.exists(esLogFile.getParent()) == false) {
                 Files.createDirectories(esLogFile.getParent());
             }
-            Files.write(
+            Files.writeString(
                 esLogFile,
-                ("[" + Instant.now().toString() + "] [BUILD] " + message + "\n").getBytes(StandardCharsets.UTF_8),
+                "[" + Instant.now().toString() + "] [BUILD] " + message + "\n",
                 StandardOpenOption.CREATE,
                 StandardOpenOption.APPEND
             );
@@ -630,7 +622,7 @@ public class ElasticsearchNode implements TestClusterConfiguration {
     }
 
     private boolean isSettingTrue(String name) {
-        return Boolean.valueOf(settings.getOrDefault(name, "false").toString());
+        return Boolean.parseBoolean(settings.getOrDefault(name, "false").toString());
     }
 
     private void copyExtraConfigFiles() {
@@ -659,14 +651,14 @@ public class ElasticsearchNode implements TestClusterConfiguration {
     private void copyExtraJars() {
         List<File> extraJarFiles = this.extraJarConfigurations.stream()
             .flatMap(fileCollection -> fileCollection.getFiles().stream())
-            .collect(Collectors.toList());
+            .toList();
 
         if (extraJarFiles.isEmpty() == false) {
             logToProcessStdout("Setting up " + this.extraJarConfigurations.size() + " additional jar dependencies");
         }
         extraJarFiles.forEach(from -> {
             if (from.getName().endsWith(".jar") == false) {
-                throw new IllegalArgumentException("extra jar file " + from.toString() + " doesn't appear to be a JAR");
+                throw new IllegalArgumentException("extra jar file " + from + " doesn't appear to be a JAR");
             }
 
             Path destination = getDistroDir().resolve("lib").resolve(from.getName());
@@ -674,7 +666,7 @@ public class ElasticsearchNode implements TestClusterConfiguration {
                 Files.copy(from.toPath(), destination, StandardCopyOption.REPLACE_EXISTING);
                 LOGGER.info("Added extra jar {} to {}", from.getName(), destination);
             } catch (IOException e) {
-                throw new UncheckedIOException("Can't copy extra jar dependency " + from.getName() + " to " + destination.toString(), e);
+                throw new UncheckedIOException("Can't copy extra jar dependency " + from.getName() + " to " + destination, e);
             }
         });
     }
@@ -809,9 +801,7 @@ public class ElasticsearchNode implements TestClusterConfiguration {
                     ArrayList<CharSequence> result = new ArrayList<>();
                     result.add("/c");
                     result.add("bin\\" + tool + ".bat");
-                    for (CharSequence arg : args) {
-                        result.add(arg);
-                    }
+                    Collections.addAll(result, args);
                     return result;
                 }).onUnix(() -> Arrays.asList(args)).supply());
                 spec.setStandardInput(byteArrayInputStream);
@@ -914,7 +904,7 @@ public class ElasticsearchNode implements TestClusterConfiguration {
         final ProcessBuilder processBuilder = new ProcessBuilder();
         Path effectiveDistroDir = getDistroDir();
         List<String> command = OS.<List<String>>conditional()
-            .onUnix(() -> Arrays.asList(effectiveDistroDir.resolve("./bin/elasticsearch").toString()))
+            .onUnix(() -> List.of(effectiveDistroDir.resolve("./bin/elasticsearch").toString()))
             .onWindows(() -> Arrays.asList("cmd", "/c", effectiveDistroDir.resolve("bin\\elasticsearch.bat").toString()))
             .supply();
         processBuilder.command(command);
@@ -924,9 +914,14 @@ public class ElasticsearchNode implements TestClusterConfiguration {
         environment.clear();
         environment.putAll(getESEnvironment());
 
+        // Direct the stdout and stderr to the ES log file. This should not contend with the actual ES
+        // process once it is started since there we close replace stdout/stderr handles once logging is setup.
+        processBuilder.redirectOutput(ProcessBuilder.Redirect.appendTo(esLogFile.toFile()));
+        processBuilder.redirectErrorStream(true);
+
         if (keystorePassword != null && keystorePassword.length() > 0) {
             try {
-                Files.write(esStdinFile, (keystorePassword + "\n").getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE);
+                Files.writeString(esStdinFile, keystorePassword + "\n", StandardOpenOption.CREATE);
                 processBuilder.redirectInput(esStdinFile.toFile());
             } catch (IOException e) {
                 throw new TestClustersException("Failed to set the keystore password for " + this, e);
@@ -938,45 +933,7 @@ public class ElasticsearchNode implements TestClusterConfiguration {
         } catch (IOException e) {
             throw new TestClustersException("Failed to start ES process for " + this, e);
         }
-        // Capture the process stdout/stderr, if any, that may be emitted before ES logger is configured
-        threads[0] = new OutputThread(esProcess.getInputStream(), OutputThread.Type.sdtout, esLogFile);
-        threads[1] = new OutputThread(esProcess.getErrorStream(), OutputThread.Type.stderr, esLogFile);
-        threads[0].start();
-        threads[1].start();
         reaperServiceProvider.get().registerPid(toString(), esProcess.pid());
-    }
-
-    private static final Thread[] threads = new OutputThread[2];
-
-    /** A thread that reads until EOF on the give input stream, and makes the stringified data available. */
-    private static class OutputThread extends Thread {
-        enum Type {
-            sdtout,
-            stderr
-        }
-
-        private final InputStream is;
-        private final Type type;
-        private final Path logFile;
-
-        OutputThread(InputStream is, Type type, Path logFile) {
-            this.is = is;
-            this.type = type;
-            this.logFile = logFile;
-        }
-
-        @Override
-        public void run() {
-            BufferedReader reader = new BufferedReader(new InputStreamReader(is));
-            try {
-                String s;
-                while ((s = reader.readLine()) != null) {
-                    logToProcessStdout(type + " : [" + s + "]", logFile);
-                }
-            } catch (Exception e) {
-                throw new RuntimeException(e);
-            }
-        }
     }
 
     @Internal
@@ -1044,13 +1001,6 @@ public class ElasticsearchNode implements TestClusterConfiguration {
         requireNonNull(esProcess, "Can't stop `" + this + "` as it was not started or already stopped.");
         // Test clusters are not reused, don't spend time on a graceful shutdown
         stopHandle(esProcess.toHandle(), true);
-        try {
-            for (Thread oThread : threads) {
-                oThread.join(Duration.ofSeconds(30).toMillis());
-            }
-        } catch (InterruptedException e) {
-            throw new RuntimeException(e);
-        }
         reaperServiceProvider.get().unregister(toString());
         esProcess = null;
         // Clean up the ports file in case this is started again.
@@ -1083,7 +1033,7 @@ public class ElasticsearchNode implements TestClusterConfiguration {
         // they'll be recorded as having failed and won't restart when the cluster restarts.
         // ES could actually be a child when there's some wrapper process like on Windows,
         // and in that case the ML processes will be grandchildren of the wrapper.
-        List<ProcessHandle> children = processHandle.children().collect(Collectors.toList());
+        List<ProcessHandle> children = processHandle.children().toList();
         try {
             logProcessInfo("Terminating elasticsearch process" + (forcibly ? " forcibly " : "gracefully") + ":", processHandle.info());
 
@@ -1376,12 +1326,11 @@ public class ElasticsearchNode implements TestClusterConfiguration {
 
         final Path configFileRoot = configFile.getParent();
         try {
-            Files.write(
+            Files.writeString(
                 configFile,
                 Stream.concat(settings.entrySet().stream(), baseConfig.entrySet().stream())
                     .map(entry -> entry.getKey() + ": " + entry.getValue())
-                    .collect(Collectors.joining("\n"))
-                    .getBytes(StandardCharsets.UTF_8),
+                    .collect(Collectors.joining("\n")),
                 StandardOpenOption.TRUNCATE_EXISTING,
                 StandardOpenOption.CREATE
             );
@@ -1428,15 +1377,12 @@ public class ElasticsearchNode implements TestClusterConfiguration {
         Version version = getVersion();
         String heapDumpOrigin = getVersion().onOrAfter("6.3.0") ? "-XX:HeapDumpPath=data" : "-XX:HeapDumpPath=/heap/dump/path";
         Path relativeLogPath = workingDir.relativize(confPathLogs);
-        expansions.put(heapDumpOrigin, "-XX:HeapDumpPath=" + relativeLogPath.toString());
+        expansions.put(heapDumpOrigin, "-XX:HeapDumpPath=" + relativeLogPath);
         if (version.onOrAfter("6.2.0")) {
             expansions.put("logs/gc.log", relativeLogPath.resolve("gc.log").toString());
         }
         if (getVersion().getMajor() >= 7) {
-            expansions.put(
-                "-XX:ErrorFile=logs/hs_err_pid%p.log",
-                "-XX:ErrorFile=" + relativeLogPath.resolve("hs_err_pid%p.log").toString()
-            );
+            expansions.put("-XX:ErrorFile=logs/hs_err_pid%p.log", "-XX:ErrorFile=" + relativeLogPath.resolve("hs_err_pid%p.log"));
         }
         return expansions;
     }
@@ -1475,13 +1421,13 @@ public class ElasticsearchNode implements TestClusterConfiguration {
 
     @Classpath
     public FileCollection getInstalledClasspath() {
-        return pluginAndModuleConfiguration.filter(f -> f.isDirectory() == false && f.getName().endsWith(".jar"));
+        return pluginAndModuleConfiguration.getAsFileTree().filter(f -> f.getName().endsWith(".jar"));
     }
 
     @InputFiles
     @PathSensitive(PathSensitivity.RELATIVE)
     public FileCollection getInstalledFiles() {
-        return pluginAndModuleConfiguration.filter(f -> f.isDirectory() == false && f.getName().endsWith(".jar") == false);
+        return pluginAndModuleConfiguration.getAsFileTree().filter(f -> f.getName().endsWith(".jar") == false);
     }
 
     @Classpath
@@ -1608,7 +1554,7 @@ public class ElasticsearchNode implements TestClusterConfiguration {
 
     @Internal
     public boolean isHttpSslEnabled() {
-        return Boolean.valueOf(settings.getOrDefault("xpack.security.http.ssl.enabled", "false").toString());
+        return Boolean.parseBoolean(settings.getOrDefault("xpack.security.http.ssl.enabled", "false").toString());
     }
 
     void configureHttpWait(WaitForHttpResource wait) {
@@ -1668,7 +1614,7 @@ public class ElasticsearchNode implements TestClusterConfiguration {
     }
 
     private static class CliEntry {
-        private String executable;
+        private final String executable;
         private CharSequence[] args;
 
         CliEntry(String executable, CharSequence[] args) {
@@ -1687,16 +1633,7 @@ public class ElasticsearchNode implements TestClusterConfiguration {
         }
     }
 
-    private static class FeatureFlag {
-        private final String feature;
-        private final Version from;
-        private final Version until;
-
-        public FeatureFlag(String feature, Version from, Version until) {
-            this.feature = feature;
-            this.from = from;
-            this.until = until;
-        }
+    private record FeatureFlag(String feature, Version from, Version until) {
 
         @Input
         public String getFeature() {
